[tool.poetry]
name = "Ostolaskujen_AI_kasittely"
version = "0.1.0"
description = ""
authors = ["Alexey Sofiev"]

[tool.poetry.dependencies]
python = "^3.7"

# The following requirements are for projects that apply MostGeneralFunctions.
# If yours does not, remove these and make sure your dependencies don't break.
azure = "2.0.0"
mss = "^5.1.0"
openpyxl = "^3.0.3"
ipdb="^0.13.3"
datetime="^4.3"
scikit-learn="0.23.1"
joblib="^0.13.2"
xlwt="^1.3.0"
xlrd="^1.2.0"
pandas = "1.0.3"
azure-storage-blob= "^12.4.0" 
PyPDF2 = "^1.26.0"
lxml = "^4.6.1"


[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
